# ihurl

./: .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  README.md  biome.json  index.html  justfile  package-lock.json  package.json
.github/workflows/: release.yml  verify.yml
src/: App.tsx
src-tauri/: Cargo.toml  justfile  tauri.conf.json
